--- a/src/views/partials/navbar.hbs
+++ b/src/views/partials/navbar.hbs
@@ -1,4 +1,4 @@
-<nav class="bg-white dark:bg-gray-800 shadow-md transition-colors duration-200 sticky top-0 z-50">
+<nav class="bg-white dark:bg-gray-800 shadow-md transition-colors duration-200 fixed top-0 left-0 right-0 z-50">
     <div class="container mx-auto px-4">
         <div class="flex justify-between items-center h-16">
             <!-- Logo -->
