--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -46,6 +46,9 @@
     {{{body}}}
     {{/unless}}
     
+    <!-- Error Handler (must load first) -->
+    <script src="/js/components/errorHandler.js"></script>
+    
     <!-- Scripts base -->
     <script src="/js/main.js"></script>
     <script src="/js/components/validation.js"></script>
