Revert "commit cambios"
This reverts commit 800231bd194c43f202f4b14268c6bc774055d35e.

--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -46,15 +46,12 @@
     {{{body}}}
     {{/unless}}
     
-    <!-- Debug Logger (must load first) -->
-    <script src="/js/utils/debugLog.js"></script>
-    
-    <!-- Error Handler -->
+    <!-- Error Handler (must load first) -->
     <script src="/js/components/errorHandler.js"></script>
     
     <!-- Scripts base -->
     <script src="/js/main.js"></script>
-    <parameter name="validation.js">
+    <script src="/js/components/validation.js"></script>
     
     <!-- Scripts adicionales por página -->
     {{{scripts}}}
