--- a/src/views/layouts/main.hbs
+++ b/src/views/layouts/main.hbs
@@ -9,6 +9,11 @@
     <link rel="icon" href="/images/favicon.png" type="image/png">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
     
+    <!-- Google Fonts - DynaPuff -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DynaPuff:wght@400;500;600;700&display=swap" rel="stylesheet">
+    
     <!-- Tailwind CSS precompilado -->
     <link rel="stylesheet" href="/css/tailwind.css">
     <link rel="stylesheet" href="/css/style.css">
